# near-nft-testing

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
nft-contract/: Cargo.toml
nft-contract/src/: lib.rs
testing/: package-lock.json
testing/__tests__/: approval.ts  core.ts  enumeration.ts  events.ts  main.ava.ts  metadata.ts  nep171.ts  payouts.ts  test-utils.ts
